--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,146 @@
 @charset "utf-8";
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+.header{
+    width: 100%;
+    padding:20px 50px;
+
+    display: flex;justify-content: space-between;align-items: center;   
+    position: absolute;
+    z-index: 10;
+}
+.hdlogo{display: block;}
+.navbar{width: 1300px;}
+.navbar ul{display:flex;justify-content: center; flex-direction:row;}
+.navbar ul li{
+    display: block;
+    padding:0 30px;
+}
+.navbar ul li>a{
+    color:white; font-size: 19px;letter-spacing: -0.5px;
+    line-height: 24px;
+}
+.login{width: 200px;}
+.login i{font-size: 13px;}
+.login a{display: block; float: right;color: white;font-size: 14px;}
+
+.visualWrap{width: 100%;height: 1030px;}
+.swiper {width: 100%;height: 100%;}
+.swiper-slide {
+    text-align: center;
+    font-size: 19px;
+    background: #fff;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
+  .swiper .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .swiper .swiper-slide .txtbox{
+    position: absolute;
+    top:50%;
+    transform: translateY(0%); 
+    opacity: 0;   
+    left: 15%;
+    transition: 1s;
+    transition-delay: 0.3s;
+  }
+
+  .swiper .swiper-slide.swiper-slide-active .txtbox{
+    transform: translateY(-50%); opacity: 1;
+  }
+  .swiper .swiper-slide .txtbox p{margin-bottom: 80px;}
+  .swiper .swiper-slide .txtbox img{margin-bottom: 80px;}
+  .swiper .swiper-slide .txtbox a{
+    width: 200px;height: 60px;
+    display: block;
+    border:1px solid #fff;
+    text-align: center;
+    line-height: 60px;
+    color:#fff;
+  }
+  :root {
+    --swiper-theme-color: #fff;
+    --swiper-pagination-bullet-vertical-gap:25px;
+    --swiper-pagination-bullet-width:6px;
+    --swiper-pagination-bullet-height:6px;
+  }
+  .swiper-vertical > .swiper-pagination-bullets, .swiper-pagination-vertical.swiper-pagination-bullets
+  {right:50px !important;}
+
+  .swiperBtn{
+    width: 150px;
+    display: flex;justify-content: space-between;align-items: center;
+    color:#fff;
+    font-size: 20px;
+    opacity:0.8;
+    z-index: 10;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform:rotate(-90deg);
+    cursor: pointer;
+  }
+  .swiperScroll{
+  width: 30px;
+  height: 46px;
+  border: 2px solid #fff;
+  border-radius: 17px;
+  position: absolute;
+  left: 50%;
+  bottom: 30px;
+  z-index: 20;
+}
+.swiperScroll span{
+  position: absolute;
+  display: block;
+  color:#fff;
+  text-align: center;
+  font-size: 12px;
+  left: -2px;
+  bottom: -20px;
+}
+.swiperScroll:after{
+  content: "";
+  display: block;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background-color: #fff;
+  position: absolute;
+  top:10px;  
+  left: 11px;
+  animation-name: scroll;
+  animation-duration: 1.8s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes scroll{
+  0%{top: 10px;}
+  100%{top: 28px;}
+}
+
+
+
+
+  
