--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,89 @@
 @charset "utf-8";
+
+
+.bannerWrap {width: 100%; margin:0 auto; height: 72px;margin-bottom: 50px;}
+
+.swiper{
+    width: 1200px;
+    height: 100%; position: relative;    
+}
+.swiper-slide{    
+    display: flex; justify-content: center;align-items: center;
+}
+.swiper-slide img{
+    width: 200px;height: 70px;
+    object-fit: contain;
+}
+/* .swiper .nextbtn{
+    position: absolute; 
+    top: 50% ;right: 0;
+    transform: translate( 0, -50% );
+    cursor: pointer;
+}
+.swiper .prevbtn{
+    position: absolute;
+    top: 50%; left: 0;
+    transform: translate( 0, -50% );
+    cursor: pointer;   
+} */
+
+
+
+
+.swiper-button-next, .swiper-button-prev {
+    width: 850px;
+    position: absolute; top:40px;
+    z-index: 10;
+    cursor: pointer;
+    display: flex;    
+    justify-content: center;
+    color:#999;
+    
+}
+
+
+
+.footerWrap{width: 100%;}
+.ftTopWrap {width: 100%; background-color:#51555b; height: 60px;}
+.ftTop{ 
+    width: 1300px; margin: 0 auto;
+    position: relative;
+    height: 60px; }
+.ftTop p{
+    float: left; display: block; text-align: center;
+}
+.ftTop a{
+    color: #fff;
+    float: left; padding: 20px;
+    display: flex; justify-content: center; align-items: center;
+}
+
+.ftBottomWrap{
+    width: 100%; height:200px;
+    background-color:#3c3f44;
+ }
+.ftBottom{
+    width: 1300px; margin: 0 auto;
+    position: relative;}
+.ftBottom a{
+    width: 245px;
+    position: absolute;
+    left: 0; margin: 20px;
+}
+.ftBottom img{padding: 20px 30px;}
+.ftadd{
+    float: right;
+    margin: 20px;
+}
+.ftadd p{
+    float: left;
+    display: flex; justify-content: center;align-items: center;
+    color: #fff; 
+    letter-spacing: -0.5px; 
+    line-height: 20px;
+}
+.ftBottom .ftadd p span::after{content: ''; width: 2px; height: 12px; background: #7a7f85; display: inline-block; margin: 0 18px;}
+.ftBottom .ftadd p span::after{content: ''; width: 2px; height: 12px; background: #7a7f85; display: inline-block; margin: 0 18px;}
+
+.ftadd .copyright{margin-top: 20px; color: #9aa0a7;}
+
