--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
 .header{
     width: 100%;
     padding:20px 50px;
-
     display: flex;justify-content: space-between;align-items: center;   
     position: absolute;
     z-index: 10;
@@ -28,8 +27,8 @@ body {
 .login a{display: block; float: right;color: white;font-size: 14px;}
 
 .visualWrap{width: 100%;height: 1030px;margin-bottom: 200px;}
-.swiper {width: 100%;height: 100%;}
-.swiper-slide {
+.visualWrap .swiper{width: 100%;height: 100%;}
+.visualWrap .swiper .swiper-slide {
     text-align: center;
     font-size: 19px;
     background: #fff;
@@ -48,14 +47,14 @@ body {
     align-items: center;
   }
 
-  .swiper .swiper-slide img {
+  .visualWrap .swiper .swiper-slide img {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
 
-  .swiper .swiper-slide .txtbox{
+  .visualWrap .swiper .swiper-slide .txtbox{
     position: absolute;
     top:50%;
     transform: translateY(0%); 
@@ -65,12 +64,12 @@ body {
     transition-delay: 0.3s;
   }
 
-  .swiper .swiper-slide.swiper-slide-active .txtbox{
+  .visualWrap .swiper .swiper-slide.swiper-slide-active .txtbox{
     transform: translateY(-50%); opacity: 1;
   }
-  .swiper .swiper-slide .txtbox p{margin-bottom: 80px;}
-  .swiper .swiper-slide .txtbox img{margin-bottom: 80px;}
-  .swiper .swiper-slide .txtbox a{
+  .visualWrap .swiper .swiper-slide .txtbox p{margin-bottom: 80px;}
+  .visualWrap .swiper .swiper-slide .txtbox img{margin-bottom: 80px;}
+  .visualWrap .swiper .swiper-slide .txtbox a{
     width: 200px;height: 60px;
     display: block;
     border:1px solid #fff;
@@ -243,6 +242,93 @@ div .quick{
   from {right: 40px;}
   to {right: 20px;opacity: 0;}
 }
+
+
+/* 연지 */
+
+.bannerWrap {width: 100%; margin:0 auto; height: 72px;margin-bottom: 50px;}
+
+.bannerWrap .swiper{
+    width: 1200px;
+    height: 100%; position: relative;    
+}
+.bannerWrap .swiper .swiper-wrapper .swiper-slide{    
+    display: flex; justify-content: center;align-items: center;
+}
+.bannerWrap .swiper .swiper-slide img{
+    width: 200px;height: 70px;
+    object-fit: contain;
+}
+/* .swiper .nextbtn{
+    position: absolute; 
+    top: 50% ;right: 0;
+    transform: translate( 0, -50% );
+    cursor: pointer;
+}
+.swiper .prevbtn{
+    position: absolute;
+    top: 50%; left: 0;
+    transform: translate( 0, -50% );
+    cursor: pointer;   
+} */
+
+/* 
+.swiper-button-next, .swiper-button-prev {
+    width: 850px;
+    position: absolute; top:40px;
+    z-index: 10;
+    cursor: pointer;
+    display: flex;    
+    justify-content: center;
+    color:#999;
+    
+} */
+
+
+/* footer */
+.footerWrap{width: 100%;}
+.ftTopWrap {width: 100%; background-color:#51555b; height: 60px;}
+.ftTop{ 
+    width: 1300px; margin: 0 auto;
+    position: relative;
+    height: 60px; }
+.ftTop p{
+    float: left; display: block; text-align: center;
+}
+.ftTop a{
+    color: #fff;
+    float: left; padding: 20px;
+    display: flex; justify-content: center; align-items: center;
+}
+
+.ftBottomWrap{
+    width: 100%; height:200px;
+    background-color:#3c3f44;
+ }
+.ftBottom{
+    width: 1300px; margin: 0 auto;
+    position: relative;}
+.ftBottom a{
+    width: 245px;
+    position: absolute;
+    left: 0; margin: 20px;
+}
+.ftBottom img{padding: 20px 30px;}
+.ftadd{
+    float: right;
+    margin: 20px;
+}
+.ftadd p{
+    float: left;
+    display: flex; justify-content: center;align-items: center;
+    color: #fff; 
+    letter-spacing: -0.5px; 
+    line-height: 20px;
+}
+.ftBottom .ftadd p span::after{content: ''; width: 2px; height: 12px; background: #7a7f85; display: inline-block; margin: 0 18px;}
+.ftBottom .ftadd p span::after{content: ''; width: 2px; height: 12px; background: #7a7f85; display: inline-block; margin: 0 18px;}
+
+.ftadd .copyright{margin-top: 20px; color: #9aa0a7;}
 
 
 
